--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -23,7 +23,7 @@
         <link id="pagestyle" href="./assets/css/material-dashboard.css?v=3.0.4" rel="stylesheet"/>
     </head>
     <body class="g-sidenav-show bg-gray-200">
-        <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
+        <!--aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
             <div class="sidenav-header">
                 <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
                 <div class="navbar-brand m-0">
@@ -32,26 +32,9 @@
                 </div>
             </div>
             <hr class="horizontal light mt-0 mb-2">
-            <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white active bg-gradient-primary">
-                            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                                <i class="material-icons opacity-10">dashboard</i>
-                            </div>
-                            <span class="nav-link-text ms-1">Dashboard 控制面板</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-                <div class="mx-3">
-                    <a class="btn bg-gradient-success w-100" href="./" type="button">Refresh 刷新页面</a>
-                    <button class="btn bg-gradient-danger w-100" onclick="fetch('/dev/shutdown/').then(()=>{location.reload()})" type="button">紧急关闭服务器</button>
-                </div>
-            </div>
-        </aside>
-        <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+
+        </aside-->
+        <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
             <!-- Navbar -->
             <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 border-radius-xl position-sticky blur shadow-blur mt-4 left-auto top-1 z-index-sticky" id="navbarBlur" data-scroll="true">
                 <div class="container-fluid py-1 px-3">
@@ -65,39 +48,18 @@
                         <h6 class="font-weight-bolder mb-0">Dashboard 控制面板</h6>
                     </nav>
                     <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
-                        <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-                            <div class="input-group input-group-outline">
-                                <label class="form-label">Type here...</label>
-                                <input type="text" class="form-control">
-                            </div>
+                        <div class="ms-md-auto pe-md-3 align-items-center" id="vue-main">
+                            <a class="btn bg-gradient-success mb-lg-0" href="/cmd" target="_blank" type="button">进入cmd</a>
+                            <a class="btn bg-gradient-success mb-lg-0 ms-lg-2" href="./" type="button">刷新页面</a>
+                            <button class="btn bg-gradient-danger mb-lg-0 ms-lg-2" onclick="fetch('/dev/shutdown/').then(()=>{location.reload()})" type="button">紧急关闭服务器</button>
+                            <button class="btn mb-lg-0 ms-lg-2" type="button" :class="wsinfo.onconnect ? 'bg-gradient-success' : ' bg-gradient-danger'">{{ wsinfo.onconnect ? "连接正常" : "连接断开 (点我重连)" }}</button>
                         </div>
                     </div>
                 </div>
             </nav>
             <!-- End Navbar -->
             <div class="container-fluid py-4">
-                <div class="row" id="overallinfo">
-                    <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-                        <div class="card" onclick="openws()">
-                            <div class="card-header p-3 pt-2">
-                                <div class="icon icon-lg icon-shape text-center border-radius-xl mt-n4 position-absolute" :class="wsinfo.onconnect ? 'bg-gradient-dark shadow-dark' : 'bg-gradient-danger shadow-danger'">
-                                    <i class="material-icons opacity-10">{{ wsinfo.onconnect ? "link" : "link_off" }}</i>
-                                </div>
-                                <div class="text-end pt-1">
-                                    <p class="text-sm mb-0 text-capitalize">服务器连接状态</p>
-                                    <h4 class="mb-0" :class="wsinfo.onconnect ? 'text-success' : 'text-danger'">{{ wsinfo.onconnect ? "连接正常" : "连接断开" }}</h4>
-                                </div>
-                            </div>
-                            <hr class="dark horizontal my-0">
-                            <div class="card-footer p-3">
-                                <p class="mb-0">
-                                    <b>点我重连</b> 已重连
-                                    <span class="text-success text-sm font-weight-bolder">{{wsinfo.connecttimes}}</span>
-                                    次
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                <!--div class="row">
                     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
                         <div class="card">
                             <div class="card-header p-3 pt-2">
@@ -158,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div-->
                 <div class="row mt-4">
                     <div class="col-lg-4 col-md-6 mt-4 mb-4">
                         <div class="card z-index-2 ">
@@ -920,7 +882,7 @@
             const openws = () => {
                 try { ws.close() } catch {}
 
-                ws = new WebSocket("ws://" + window.location.host);
+                ws = new WebSocket("ws://" + window.location.host + "/dashboard/");
 
                 ws.onopen = function () {
                     ws.send(JSON.stringify({
@@ -960,7 +922,7 @@
             
             Vue.createApp({ data() { return { lifecycle } } }).mount('#lifecycle');
 
-            Vue.createApp({ data() { return { wsinfo } } }).mount('#overallinfo');
+            Vue.createApp({ data() { return { wsinfo } } }).mount('#vue-main');
 
         </script>
         <script type="text/javascript">
